moving to java 1.8